Fixed comments: left-aligned.

--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@ h3, h1 {
 a {
 	text-align: center;
 }
+
 #important{
 	text-align: center;
 	color: red;
@@ -85,6 +86,7 @@ td.hljs-ln-code {
 }
 
 #comments {
+	text-align: left !important;
 	font-size: 14px !important;
 }
 
